# twenty48

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  Taskfile.yml  coverage.xml  pyproject.toml  skills-lock.json
.claude/: settings.json
.devcontainer/: devcontainer.json  init-firewall.sh
docs/adr/: 0001-optional-claude-only-advisor.md  0002-module-architecture.md  0003-claude-advisor-request.md
docs/research/: 0004-claude-code-oauth-token-messages-api.md
prototypes/simple-go/: main.go
prototypes/terminal-python/: game.py
prototypes/web-vanilla/: index.html
tests/: test_advisor.py  test_board.py  test_loop.py  test_main.py  test_ui.py
twenty48/: __init__.py  __main__.py  advisor.py  board.py  loop.py  ui.py
